add how does the internet work

--- a/devroadmapcollection.ipynb
+++ b/devroadmapcollection.ipynb
@@ -25,6 +25,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- A network is a group of computers or other device which are connected to eachother.\n",
+    "- The internet was developed in the late 1960s by the United States Department of Defense.\n",
+    "- Using a set of standardized protocols.\n",
+    "- Protocols define how information is exchanged between devices and ensure that data is transmitted reliably and securely.\n",
+    "- IP - Internet Protocol is responsible for routing packets to their correct destination.\n",
+    "- TCP - Transmission Control Protocol ensures that packets are transmitted reliably and in the correct order.\n",
+    "\n",
+    "- *Packet:* A small unit of data that is transmitted over the internet.\n",
+    "\n",
+    "- *Router:* A device that directs packets od data between different networks.\n",
+    "\n",
+    "- *IP Address:* A unique identifier assigned to each device on a network, used to route data to the correct destination.\n",
+    "\n",
+    "- *Domain Name:* A human-readable name that is used to identify a website, such as google.com.\n",
+    "\n",
+    "- *DNS:* The Domain Name System is responsible for translating domain names into IP addresses.\n",
+    "\n",
+    "- *HTTP:* The Hypertext Transfer Protocol is used to transfer data between a client (such as a web browser) and a server (such as a website).\n",
+    "\n",
+    "- *HTTPS:* An ecrypted version of HTTP that is used to provide secure communication between a client and server.\n",
+    "\n",
+    "- *SSL/TLS:* The Secure Sockets Layer and Transport Layer Security protocols are used to provide secure communication over the internet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### What is HTTP?"
    ]
   },
