--- a/devroadmapcollection.ipynb
+++ b/devroadmapcollection.ipynb
@@ -72,6 +72,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The Hypertext Transfer Protocol (HTTP) is the foundation of the World Wide Web, and is used to load webpages using hypertext links. HTTP is an application layer protocol designed to transfer information between networked devices and runs on top of other layers of the network protocol stack.\n",
+    "\n",
+    "- A typical HTTP request contains:\n",
+    "    - HTTP version type\n",
+    "    - a URL\n",
+    "    - an HTTP method\n",
+    "    - HTTP request headers\n",
+    "    - Optional HTTP body"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Browsers and how they work?"
    ]
   },
