--- a/devroadmapcollection.ipynb
+++ b/devroadmapcollection.ipynb
@@ -86,6 +86,135 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### What is an HTTP method?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Two of the most common HTTP methods are 'GET' and 'POST'; a 'GET' request expects information back in return (usually in the form of a website), while a 'POST' request typically indicates that the client is submitting information to the web server (such as form information, e.g. a submitted username and password)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What are HTTP request headers?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "HTTP headers contain text information stored in key-value pairs, and they are included in every HTTP request (and response, more on that later). These headers communicate core information, such as what browser the client is using and what data is being requested.\n",
+    "\n",
+    "- Example of HTTP request headers from Google Chrome's network tab:\n",
+    "    - Request headers:\n",
+    "        - :authority: www.google.com\n",
+    "        - :method: GET\n",
+    "        - :path: /\n",
+    "        - :scheme: https\n",
+    "        - accept: text/html\n",
+    "        - accept-encoding: gzip, deflate, br\n",
+    "        - accept-language: en-US,en;q=0.9\n",
+    "        - upgrade-insecure-requests: 1\n",
+    "        - user-agent: Mozilla/5.0\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What is in an HTTP request body?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The body of a request is the part that contains the 'body' of information the request is transferring. The body of an HTTP request contains any information being submitted to the web server, such as a username and password, or any other data entered into a form."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What is in an HTTP response?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An HTTP response is what web clients (often browsers) receive from an internet server in answer to an HTTP request. These responses communicate valuable information based on what was asked for in the HTTP request.\n",
+    "\n",
+    "- A typical HTTP response contains:\n",
+    "    - an HTTP status code\n",
+    "    - HTTP response headers\n",
+    "    - optional HTTP body"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What's an HTTP status code?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "HTTP status codes are 3-digit codes most often used to indicate whether an HTTP request has been successfully completed. Status codes are broken into the following 5 bocks:\n",
+    "- 1xx informational\n",
+    "- 2xx success\n",
+    "- 3xx redirection\n",
+    "- 4xx client error\n",
+    "- 5xx server error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What are HTTP response headers?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Much like an HTTP request, an HTTP response comes with headers that convey important information such as the language and format of the data being sent in the response body.\n",
+    "- Example of HTTP response headers from Google Chrome's network tab:\n",
+    "    - Response headers\n",
+    "        - cache-control: private, max-age=0\n",
+    "        - content-encoding: br\n",
+    "        - content-type: text/html; charset=UTF-8\n",
+    "        - date: Thu, 21 Dec 2017 18:25:08 GMT\n",
+    "        - status: 200\n",
+    "        - strict-transport-security: max-age=86400\n",
+    "        - x-frame-options: SAMEORIGIN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What is in an HTTP response body?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Successful HTTP responses to 'GET' requests generally have a body which contains the requested information, in most web requests, this is HTML data that a web browser will translate into a webpage."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Browsers and how they work?"
    ]
   },
@@ -1106,7 +1235,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
