--- a/devroadmapcollection.ipynb
+++ b/devroadmapcollection.ipynb
@@ -299,6 +299,495 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "write a python program to print \"Hello Python\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello Python\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a python program to do arithmetical operations addition and division"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum: 2.0 + 5.0 = 7.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Addition\n",
+    "num1 = float(input(\"Enter the first number for addition: \"))\n",
+    "num2 = float(input(\"Enter the second number for addition: \"))\n",
+    "sum_result = num1 + num2\n",
+    "print(f\"sum: {num1} + {num2} = {sum_result}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Division: 5.0 / 8.0 = 0.625\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Division\n",
+    "num3 = float(input(\"Enter the dividend for division: \"))\n",
+    "num4 = float(input(\"Enter the divisor for division: \"))\n",
+    "if num4 == 0:\n",
+    "    print(\"Error: Division by zero is not allowed.\")\n",
+    "else: \n",
+    "    div_result = num3 / num4\n",
+    "    print(f\"Division: {num3} / {num4} = {div_result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a python program to find the area of triangle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the triangle is: 125.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Input the base and height from the user\n",
+    "base = float(input(\"Enter the length of the base of the triangle: \"))\n",
+    "height = float(input(\"Enter the height of the triangle: \"))\n",
+    "# Calculate the area of the triangle\n",
+    "area = 0.5 * base * height\n",
+    "# Display the result\n",
+    "print(f\"The area of the triangle is: {area}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a python program to swap two variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original values: a = 5, b = 2\n",
+      "Swapped values: a = 2, b = 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Input two variables\n",
+    "a = input(\"Enter the value of the first variable (a): \")\n",
+    "b = input(\"Enter the value of the second variable (b): \")\n",
+    "# Display the original values\n",
+    "print(f\"Original values: a = {a}, b = {b}\")\n",
+    "# Swap the values using a temporary\n",
+    "temp = a\n",
+    "a = b\n",
+    "b = temp\n",
+    "# Display the swapped values\n",
+    "print(f\"Swapped values: a = {a}, b = {b}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a python program to generate a random number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random number: 75\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "print(f\"Random number: {random.randint(1, 100)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a python to convert kilometers to miles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50.0 kilometers is equal to 31.068550000000002 miles\n"
+     ]
+    }
+   ],
+   "source": [
+    "kilometers = float(input(\"Enter distance in Kilometers: \"))\n",
+    "\n",
+    "# Conversion factor: 1 kilometer = 0.621371 miles\n",
+    "conversion_factor = 0.621371\n",
+    "\n",
+    "miles = kilometers * conversion_factor\n",
+    "\n",
+    "print(f\"{kilometers} kilometers is equal to {miles} miles\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a python program to convert celcius to fahrenheit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.0 degrees Celsius is equal to 59.0 degrees Fahrenheit\n"
+     ]
+    }
+   ],
+   "source": [
+    "celsius = float(input(\"Enter temperature in Celcius: \"))\n",
+    "\n",
+    "# Conversion formula: fahrenheit = (Celsius * 9/5) + 32\n",
+    "fahrenheit = (celsius * 9/5) + 32\n",
+    "print(f\"{celsius} degrees Celsius is equal to {fahrenheit} degrees Fahrenheit\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a python program to display calendar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    October 2024\n",
+      "Mo Tu We Th Fr Sa Su\n",
+      "    1  2  3  4  5  6\n",
+      " 7  8  9 10 11 12 13\n",
+      "14 15 16 17 18 19 20\n",
+      "21 22 23 24 25 26 27\n",
+      "28 29 30 31\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import calendar\n",
+    "\n",
+    "year = int(input(\"Enter year: \"))\n",
+    "month = int(input(\"Enter month: \"))\n",
+    "\n",
+    "cal = calendar.month(year, month)\n",
+    "print(cal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a Python program to solve quadratic equation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root 1: -2.0 + 2.0i\n",
+      "Root 2: -2.0 + 2.0i\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "# input coefficients\n",
+    "a = float(input(\"Enter coefficient a: \"))\n",
+    "b = float(input(\"Enter coefficient b: \"))\n",
+    "c = float(input(\"Enter coefficient c: \"))\n",
+    "\n",
+    "# calculate the discriminant \n",
+    "discriminant = b**2 - 4*a*c\n",
+    "\n",
+    "# check if the discriminant is positive, negative, or zero\n",
+    "if discriminant > 0:\n",
+    "    # Two real and distinct roots\n",
+    "    root1 = (-b + math.sqrt(discriminant)) / (2*a)\n",
+    "    root2 = (-b - math.sqrt(discriminant)) / (2*a)\n",
+    "    print(f\"Root 1: {root1}\")\n",
+    "    print(f\"Root 2: {root2}\")\n",
+    "elif discriminant == 0:\n",
+    "    # One real root (repeated)\n",
+    "    root = -b / (2*a)\n",
+    "    print(f\"Root: {root}\")\n",
+    "else:\n",
+    "    # Complex roots\n",
+    "    real_part = -b / (2*a)\n",
+    "    imaginary_part = math.sqrt(abs(discriminant)) / (2*a)\n",
+    "    print(f\"Root 1: {real_part} + {imaginary_part}i\")\n",
+    "    print(f\"Root 2: {real_part} + {imaginary_part}i\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a python program to swap two variables without temp variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After swapping:\n",
+      "a = 10\n",
+      "b = 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5\n",
+    "b = 10\n",
+    "\n",
+    "# Swapping without a temporary variable\n",
+    "a, b = b, a\n",
+    "\n",
+    "print(\"After swapping:\")\n",
+    "print(\"a =\", a)\n",
+    "print(\"b =\", b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a python program to check if a number is positive, negative or zero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positive number\n",
+      "8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = float(input(\"Enter a number: \"))\n",
+    "if num > 0:\n",
+    "    print(\"Positive number\")\n",
+    "elif num == 0:\n",
+    "    print(\"Zero\")\n",
+    "else:\n",
+    "    print(\"Negative number\")\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a python program to chek if a number is odd or even"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a odd number\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "if num%2 == 0:\n",
+    "    print(\"This is a even number\")\n",
+    "else:\n",
+    "    print(\"This is a odd number\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a python program to check leap year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023 is not a leap year\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = int(input(\"Enter a year: \"))\n",
+    "\n",
+    "# divided by 100 means century year (ending with 00)\n",
+    "# century year divided by 400 is leap year\n",
+    "if (year % 400 == 0) and (year % 100 == 0):\n",
+    "    print(\"{0} is a leap year\".format(year))\n",
+    "\n",
+    "# not divided by 100 means not a century year\n",
+    "# year divided by 4 is a leap year\n",
+    "elif(year % 4 == 0) and (year % 100 != 0):\n",
+    "    print(\"{0} is a leap year\".format(year))\n",
+    "\n",
+    "# if not divided by both 400 (century year) and 4 (not century year)\n",
+    "# year is not leap year\n",
+    "else:\n",
+    "    print(\"{0} is not a leap year\".format(year))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a python program to check prime number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10, is not a prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "# define a flag variable \n",
+    "flag = False\n",
+    "\n",
+    "if num == 1:\n",
+    "    print(f\"{num}, is not a prime number\")\n",
+    "elif num > 1:\n",
+    "    #check for factors\n",
+    "    for i in range(2, num):\n",
+    "        if (num % i) == 0:\n",
+    "            flag = True #if factor is found, set flag to True\n",
+    "            # break out of loop\n",
+    "            break\n",
+    "    # check if flag is True\n",
+    "if flag:\n",
+    "    print(f\"{num}, is not a prime number\")\n",
+    "else:\n",
+    "    print(f\"{num}, is a prime number\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Ruby"
    ]
   },
@@ -1234,7 +1723,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.13"
   }
  },
