--- a/devroadmapcollection.ipynb
+++ b/devroadmapcollection.ipynb
@@ -788,6 +788,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "write a python program to print all prime numbers in an interval of 1-10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prime numbers between 1 and 10 are:\n",
+      "3\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "7\n",
+      "7\n",
+      "7\n",
+      "7\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python program to display all the prime numbers within an interval\n",
+    "\n",
+    "lower = 1\n",
+    "upper = 10\n",
+    "\n",
+    "print(\"Prime numbers between\", lower, \"and\", upper, \"are:\")\n",
+    "\n",
+    "for num in range(lower, upper + 1):\n",
+    "    # all prime numbers are greater than 1\n",
+    "    if num > 1:\n",
+    "        for i in range(2, num):\n",
+    "            if (num % i) == 0:\n",
+    "                break\n",
+    "            else:\n",
+    "                print(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a python program to find the factorial of a number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The factorial of 5 is 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter a number: \"))\n",
+    "factorial = 1\n",
+    "if num <0:\n",
+    "    print(\"Factorial does not exist for negative numbers\")\n",
+    "elif num == 0:\n",
+    "    print(\"Factorial of 0 is 1\")\n",
+    "else:\n",
+    "    for i in range(1, num+1):\n",
+    "        factorial = factorial*i\n",
+    "    print(f'The factorial of {num} is {factorial}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a python program to display the multiplication table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 X 1 = 5\n",
+      "5 X 2 = 10\n",
+      "5 X 3 = 15\n",
+      "5 X 4 = 20\n",
+      "5 X 5 = 25\n",
+      "5 X 6 = 30\n",
+      "5 X 7 = 35\n",
+      "5 X 8 = 40\n",
+      "5 X 9 = 45\n",
+      "5 X 10 = 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Display multiplication table of: \"))\n",
+    "\n",
+    "for i in range(1, 11):\n",
+    "    print(f\"{num} X {i} = {num*i}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Ruby"
    ]
   },
